Revert "broken UI fixing (#449)"
This reverts commit 38dfce83ee34563909e37d4d70b880c2f2cab5bb.

--- a/src/user/dashboard/dashboard.scss
+++ b/src/user/dashboard/dashboard.scss
@@ -9,7 +9,6 @@
   }
   .news {
     flex: 2;
-    margin-left: 200px;
     .notify-user {
       display: flex;
       padding: 20px 0px 20px 30px;
